tests/invalid/parse/manual_ex026.pts
function main() : void {
    int x = (a = 1);
    a = b = c;
}
